// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> renders 1`] = `
<Section
  node="div"
>
  <div
    className="section"
  />
</Section>
`;

exports[`<Section /> renders children 1`] = `
<Section
  node="div"
>
  <div
    className="section"
  >
    <p>
      nope
    </p>
  </div>
</Section>
`;
